--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
-    <title>Virtual Folio - Portfolio HTML5 Template</title>
+    <title>Ziyi Kou</title>
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="./assets/css/themify-icons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.css">
