--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@ a {
                         <a href="#skill" class="nav-link" data-animate="scrolling">Skill</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#pub" class="nav-link" data-animate="scrolling">Publication</a>
+                        <a href="#pub" class="nav-link" data-animate="scrolling">Award</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#award" class="nav-link" data-animate="scrolling">Award</a>
+                        <a href="#award" class="nav-link" data-animate="scrolling">Publication</a>
                     </li>
                 </ul>
             </div>
@@ -143,7 +143,7 @@ a {
                             <div class="details">
                                 <h5>University of Rochester</h5>
                                 <small class="fg-theme">M.S. Computer Science, advisor: Prof. Chenliang Xu</small>
-                                <small><i>Courses:Artificial Intelligence, Adv. Topic of Computer Vision, Intro. of Statistics, Machine Learning</i></small>
+                                <small><i>Courses: Artificial Intelligence, Adv. Topic of Computer Vision, Intro. of Statistics, Machine Learning</i></small>
                             </div>
                         </li>
                         <li>
@@ -159,27 +159,27 @@ a {
                 <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
                     <h2 class="fw-normal">Work Experience</h2>
                     <ul class="timeline mt-4 pr-md-5">
-                        <li>
+<!--                         <li>
                             <div class="title" style="width: 220px">Sept. 2021 - Present</div>
                             <div class="details">
                                 <h5>Research Assistant</h5>
                                 <small class="fg-theme">University of Illinois Urbana-Champaign</small>
                                 <small><i>Crowdsourcing Misinformation Detection</i></small>
                             </div>
-                        </li>
+                        </li> -->
                         <li>
                             <div class="title" style="width: 220px">Oct. 2019 - Apr. 2020</div>
                             <div class="details">
                                 <h5>Research Assistant</h5>
                                 <small class="fg-theme">University of Rochester</small>
-                                <small><i>Talking Head Generation for huamn faces</i></small>
+                                <small><i>Weakly Supervisied Image Object Localization</i></small>
                             </div>
                         </li>
                         <li>
                             <div class="title" style="width: 220px">Jun. 2019 - Sept. 2019</div>
                             <div class="details">
                                 <h5>Machine Learning Engineer, Intern</h5>
-                                <small class="fg-theme">AI Institute of Shanghai Jiaotong University (Suzhou), China</small>
+                                <small class="fg-theme">AI Lab of Shanghai Jiaotong University (Suzhou), China</small>
                                 <small><i>SmartTV embedded Asian Celebrity Face Recognition</i></p></small>
                             </div>
                         </li>
@@ -243,48 +243,43 @@ a {
         <div class="container py-5" style="padding-top: 10px !important; padding-bottom: 5px !important;">
             <h1 class="fw-normal wow fadeIn">Awards</h1>
             <ul>
-                <li>INFOCOM 2021 Student Conference Grant</li>
+                <li>IEEE BigData 2021 Student Conference Grant</li>
+                <li>IEEE INFOCOM 2021 Student Conference Grant</li>
                 <li>Academic Tuition Scholarship, University of Rochester</li>
             </ul>
         </div>
     </div>
     <div class="vg-page2 page-about" id="pub" style="padding-bottom: 5px;">
         <div class="container py-5" style="padding-top: 20px !important; padding-bottom: 20px !important;">
-            <h1 class="fw-normal wow fadeIn">Publications</h1>
+            <h1 class="fw-normal wow fadeIn">Main Publications</h1>
             <ul>
+                <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Duan, Siyu and Wang, D., 2022, April.
+                    <a href="#" style="text-decoration:underline;"><i>Can I only share my eyes? A Web Crowdsourcing based Face Partition Approach Towards Privacy-Aware Face Recognition.</i></a>
+                    In 2022 International Conference on World Wide Web (WWW'22)</li>
+                <li>Shang, L., <b>Kou, Z.</b>, Zhang, Y. and Wang, D., 2022, April.
+                    <a href="#" style="text-decoration:underline;"><i>A Duo-generative Approach to Explainable Multimodal COVID-19 Misinformation Detection.</i></a>
+                    In 2022 International Conference on World Wide Web (WWW'22)</li>
+                <li><b>Kou, Z.</b>, Zhang, Y., Zhang, D.Y. and Wang, D., 2022, November.
+                    <a href="#" style="text-decoration:underline;"><i>CrowdGraph: A Crowdsourcing Multi-modal Knowledge Graph Approach to Explainable Fauxtography Detection.</i></a>
+                    In 2022 ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW'22)</li>
+                <li><b>Kou, Z.</b>, Shang, L., Zeng, H, Zhang, Y.,  and Wang, D., 2021, December.
+                    <a href="#" style="text-decoration:underline;"><i>ExgFair: A Crowdsourcing Data Exchange Approach To Fair Human Face Datasets Augmentation.</i></a>
+                    In 2021 IEEE International Conference on Big Data (BigData'21)</li>
                 <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Wang, D., 2022, January.
                     <a href="#" style="text-decoration:underline;"><i>HC-COVID: A Hierarchical Crowdsource Knowledge Graph to Explainable COVID-19 Misinformation Detection.</i></a>
                     In Proceedings of the 2022 ACM Conference on Supporting Groupwork (GROUP'22)</li>
-                <li>Zhang, D.Y., <b>Kou, Z.</b> and Wang, D., 2020, December.
-                    <a href="https://ieeexplore.ieee.org/abstract/document/9378043" style="text-decoration:underline;"><i>Fairfl: A fair federated learning approach to reducing demographic bias in privacy-sensitive classification models.</i></a>
-                    In 2020 IEEE International Conference on Big Data (BigData'20)</li>
-                <li><b>Kou, Z.</b>, Zhang, D.Y., Shang, L. and Wang, D., 2020, December.
-                    <a href="https://ieeexplore.ieee.org/abstract/document/9378019" style="text-decoration:underline;"><i>ExFaux: A Weakly Supervised Approach to Explainable Fauxtography Detection.</i></a>
-                    In 2020 IEEE International Conference on Big Data (BigData'20)</li>
                 <li><b>Kou, Z.</b>, Zhang, Y., Shang, L. and Wang, D., 2021, June.
                     <a href="https://ieeexplore.ieee.org/abstract/document/9521312" style="text-decoration:underline;"><i>FairCrowd: Fair Human Face Dataset Sampling via Batch-Level Crowdsourcing Bias Inference.</i></a>
                     In 2021 IEEE/ACM 29th International Symposium on Quality of Service (IWQOS'21)</li>
                 <li>Zhang, D.Y., <b>Kou, Z.</b> and Wang, D., 2021, May.
                     <a href="https://ieeexplore.ieee.org/abstract/document/9488776" style="text-decoration:underline;"><i>FedSens: A Federated Learning Approach for Smart Health Sensing with Class Imbalance in Resource Constrained Edge Computing.</i></a>
                     In IEEE INFOCOM 2021-IEEE Conference on Computer Communications (INFOCOM' 21)</li>
-                <li><b>Kou, Z.</b>*, Cui, G.*, Wang, S., Zhao, W. and Xu, C., 2021.
+                <li><b>Kou, Z.</b>, Cui, G., Wang, S., Zhao, W. and Xu, C., 2021.
                     <a href="https://openaccess.thecvf.com/content/WACV2021/html/Kou_Improve_CAM_With_Auto-Adapted_Segmentation_and_Co-Supervised_Augmentation_WACV_2021_paper.html" style="text-decoration:underline;"><i>Improve CAM with Auto-adapted Segmentation and Co-supervised Augmentation.</i></a>
                     In Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV'21)</li>
-                <li>Wang, S., Zhao, W., <b>Kou, Z.</b> and Xu, C., 2021.
-                    <a href="https://openaccess.thecvf.com/content/WACV2021/papers/Wang_How_to_Make_a_BLT_Sandwich_Learning_VQA_Towards_Understanding_WACV_2021_paper.pdf" style="text-decoration:underline;"><i>How to Make a BLT Sandwich? Learning VQA towards Understanding Web Instructional Videos</i></a>
-                    In Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV'21)</li>
-                <li>Khan, S.K., Zhang, D.Y., <b>Kou, Z.</b>, Zhang, Y. and Wang, D., 2021, May.
-                    <a href="https://link.springer.com/chapter/10.1007/978-3-030-75762-5_51" style="text-decoration:underline;"><i>PhotoStylist: Altering the Style of Photos Based on the Connotations of Texts</i></a>
-                    In Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD'21)</li>
-                <li>Zhang, Y., Zong, R., <b>Kou, Z.</b>, Shang, L. and Wang, D., 2021.
-                    <a href="https://ieeexplore.ieee.org/abstract/document/9534702" style="text-decoration:underline;"><i>CollabLearn: An Uncertainty-Aware Crowd-AI Collaboration System for Cultural Heritage Damage Assessment</i></a>
-                    IEEE Transactions on Computational Social Systems (TCSS'21)</li>
-                <li>Chen, L., Cui, G., <b>Kou, Z.</b>, Zheng, H. and Xu, C., 2020, June.
-                    <a href="https://arxiv.org/abs/2005.03201" style="text-decoration:underline;"><i>What comprises a good talking-head video generation?</i></a>
-                    IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVPRW'20)</li>
-                <li>Zhang, Y., Zong, R., <b>Kou, Z.</b>, Shang, L. and Wang, D., 2021, June.
-                    <a href="https://ieeexplore.ieee.org/document/9521346" style="text-decoration:underline;"><i>A Crowd-driven Dynamic Neural Architecture Searching Approach to Quality-aware Streaming Disaster Damage Assessment</i></a>
-                    In 2021 IEEE/ACM 29th International Symposium on Quality of Service (IWQOS'21)</li>
+                <li><b>Kou, Z.</b>, Zhang, D.Y., Shang, L. and Wang, D., 2020, December.
+                    <a href="https://ieeexplore.ieee.org/abstract/document/9378019" style="text-decoration:underline;"><i>ExFaux: A Weakly Supervised Approach to Explainable Fauxtography Detection.</i></a>
+                    In 2020 IEEE International Conference on Big Data (BigData'20)</li>
             </ul>
         </div>
     </div>
