--- a/index.html
+++ b/index.html
@@ -280,6 +280,12 @@ a {
                 <li><b>Kou, Z.</b>, Zhang, D.Y., Shang, L. and Wang, D., 2020, December.
                     <a href="https://ieeexplore.ieee.org/abstract/document/9378019" style="text-decoration:underline;"><i>ExFaux: A Weakly Supervised Approach to Explainable Fauxtography Detection.</i></a>
                     In 2020 IEEE International Conference on Big Data (BigData'20)</li>
+                <li>Chen, L., Cui, G., Liu, C., <b>Kou, Z.</b>, Xu, Y. and Xu, C., 2020, August.
+                    <a href="https://arxiv.org/pdf/2007.08547.pdf" style="text-decoration:underline;"><i>Talking-head generation with rhythmic head motion.</i></a>
+                    In 2020 European Conference on Computer Vision (ECCV'20)</li>
+                <li>Chen, L., Cui, G., <b>Kou, Z.</b>, Zheng, H. and Xu, C., 2020, June.
+                    <a href="https://arxiv.org/pdf/2007.08547.pdf" style="text-decoration:underline;"><i>What comprises a good talking-head video generation?</i></a>
+                    In 2020 European Conference on Computer Vision (CVPRW'20)</li>
             </ul>
         </div>
     </div>
