--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a {
         <span class="ti-arrow-up"></span>
     </div>
     <!-- Setting button -->
-<!--     <div class="config">
+    <!--     <div class="config">
         <div class="template-config">
             <div class="d-block">
                 <button class="btn btn-fab btn-sm" id="sideel" title="Settings"><span class="ti-settings"></span></button>
@@ -124,6 +124,15 @@ a {
             </div>
         </div>
     </div>
+    <div class="vg-page2 page-about" id="skill" style="padding-bottom: 5px;">
+        <div class="container py-5" style="padding-top: 30px !important; padding-bottom: 20px !important;">
+<!--             <h1 class="fw-normal wow fadeIn">My Skills</h1> -->
+            <ul>
+                <li>Two Papers accepted by WWW2022</li>
+                <li>One paper accepted by CSCW2022</li>
+            </ul>
+        </div>
+    </div>
     <div class="vg-page2 page-about" id="education" style="padding-bottom: 5px;">
         <div class="container pt-5" style="padding-top: 20px !important;">
             <div class="row">
@@ -159,7 +168,7 @@ a {
                 <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
                     <h2 class="fw-normal">Work Experience</h2>
                     <ul class="timeline mt-4 pr-md-5">
-<!--                         <li>
+                        <!--                         <li>
                             <div class="title" style="width: 220px">Sept. 2021 - Present</div>
                             <div class="details">
                                 <h5>Research Assistant</h5>
@@ -239,7 +248,7 @@ a {
             </div>
         </div>
     </div>
-        <div class="vg-page2 page-about" id="award" style="padding-bottom: 5px;">
+    <div class="vg-page2 page-about" id="award" style="padding-bottom: 5px;">
         <div class="container py-5" style="padding-top: 10px !important; padding-bottom: 5px !important;">
             <h1 class="fw-normal wow fadeIn">Awards</h1>
             <ul>
@@ -262,7 +271,7 @@ a {
                 <li><b>Kou, Z.</b>, Zhang, Y., Zhang, D.Y. and Wang, D., 2022, November.
                     <a href="#" style="text-decoration:underline;"><i>CrowdGraph: A Crowdsourcing Multi-modal Knowledge Graph Approach to Explainable Fauxtography Detection.</i></a>
                     In 2022 ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW'22)</li>
-                <li><b>Kou, Z.</b>, Shang, L., Zeng, H, Zhang, Y.,  and Wang, D., 2021, December.
+                <li><b>Kou, Z.</b>, Shang, L., Zeng, H, Zhang, Y., and Wang, D., 2021, December.
                     <a href="#" style="text-decoration:underline;"><i>ExgFair: A Crowdsourcing Data Exchange Approach To Fair Human Face Datasets Augmentation.</i></a>
                     In 2021 IEEE International Conference on Big Data (BigData'21)</li>
                 <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Wang, D., 2022, January.
