--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ a {
         <div class="container py-5" style="padding-top: 30px !important; padding-bottom: 20px !important;">
 <!--             <h1 class="fw-normal wow fadeIn">My Skills</h1> -->
             <ul>
+                <li>I will join GoDaddy as a software engineer in machine learning intern from May 2020</li>
                 <li>Two Papers accepted by WWW2022</li>
                 <li>One paper accepted by CSCW2022</li>
             </ul>
