--- a/index.html
+++ b/index.html
@@ -253,8 +253,7 @@ a {
         <div class="container py-5" style="padding-top: 10px !important; padding-bottom: 5px !important;">
             <h1 class="fw-normal wow fadeIn">Awards</h1>
             <ul>
-                <li>IEEE BigData 2021 Student Conference Grant</li>
-                <li>IEEE INFOCOM 2021 Student Conference Grant</li>
+                <li>Student Conference Grant: IEEE INFOCOM 2021, IEEE BigData 2021</li>
                 <li>Academic Tuition Scholarship, University of Rochester</li>
             </ul>
         </div>
