--- a/index.html
+++ b/index.html
@@ -116,10 +116,9 @@ a {
                         <li><b>Email:</b> <a href="mailto: ziyikou2@illinois.edu" style="text-decoration:underline;">ziyikou2@illinois.edu</a></li>
                     </ul>
                     <!-- <button class="btn btn-theme-outline"></button> -->
-                    <form method="get" action="./files/Ziyi_Kou_CV.pdf">
-                        <!-- <a href="./files/Ziyi_Kou_CV.pdf" class="btn btn-theme-outline">Download CV</a> -->
+<!--                     <form method="get" action="./files/Ziyi_Kou_CV.pdf">
                         <button class="btn btn-theme-outline">Download CV</button>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </div>
@@ -128,7 +127,7 @@ a {
         <div class="container py-5" style="padding-top: 30px !important; padding-bottom: 20px !important;">
 <!--             <h1 class="fw-normal wow fadeIn">My Skills</h1> -->
             <ul>
-                <li>I will join GoDaddy as a software engineer in machine learning intern from May 2020</li>
+                <li>I will join GoDaddy as a software engineer in machine learning intern from May 2022</li>
                 <li>Two Papers accepted by WWW2022</li>
                 <li>One paper accepted by CSCW2022</li>
             </ul>
