--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ a {
         <div class="container py-5" style="padding-top: 30px !important; padding-bottom: 20px !important;">
 <!--             <h1 class="fw-normal wow fadeIn">My Skills</h1> -->
             <ul>
-                <li>I will join GoDaddy as a software engineer in machine learning intern from May 2022</li>
+                <li>I will join GoDaddy as a machine learning software engineer intern from May 2022</li>
                 <li>Two Papers accepted by WWW2022</li>
                 <li>One paper accepted by CSCW2022</li>
             </ul>
