--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ a {
         <div class="container py-5" style="padding-top: 20px !important; padding-bottom: 20px !important;">
             <h1 class="fw-normal wow fadeIn">Main Publications</h1>
             <ul>
-                <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Duan, Siyu and Wang, D., 2022, April.
+                <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Duan, S. and Wang, D., 2022, April.
                     <a href="#" style="text-decoration:underline;"><i>Can I only share my eyes? A Web Crowdsourcing based Face Partition Approach Towards Privacy-Aware Face Recognition.</i></a>
                     In 2022 International Conference on World Wide Web (WWW'22)</li>
                 <li>Shang, L., <b>Kou, Z.</b>, Zhang, Y. and Wang, D., 2022, April.
