--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@ a {
         <div class="container py-5" style="padding-top: 30px !important; padding-bottom: 20px !important;">
 <!--             <h1 class="fw-normal wow fadeIn">My Skills</h1> -->
             <ul>
-                <li>One paper accepted by IJCAI2022 <i>AI For Good</i> track</li>
+                <li>One paper accepted by IJCAI2022</li>
                 <li>I will join GoDaddy as a machine learning software engineer intern from May 2022</li>
-                <li>Two Papers accepted by WWW2022</li>
+                <li>One paper accepted by WWW2022</li>
                 <li>One paper accepted by CSCW2022</li>
             </ul>
         </div>
