--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@ a {
         <div class="container py-5" style="padding-top: 20px !important; padding-bottom: 20px !important;">
             <h1 class="fw-normal wow fadeIn">Main Publications</h1>
             <ul>
+                <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Yue, Z., Zeng H. and Wang, D., 2022, July.
+                    <a href="#" style="text-decoration:underline;"><i>Crowd, Expert & AI: A Human-AI Interactive Approach Towards Natural Language Explanation based COVID-19 Misinformation Detection.</i></a>
+                    In 2022 International Joint Conference on Artificial Intelligence (IJCAI'22)</li>
                 <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Duan, S. and Wang, D., 2022, April.
                     <a href="#" style="text-decoration:underline;"><i>Can I only share my eyes? A Web Crowdsourcing based Face Partition Approach Towards Privacy-Aware Face Recognition.</i></a>
                     In 2022 International Conference on World Wide Web (WWW'22)</li>
