--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@ a {
                 </div>
                 <div class="col-lg-6 offset-lg-1 wow fadeInRight">
                     <h1 class="fw-light">Ziyi Kou</h1>
-                    <h5 class="fg-theme mb-3">Ph.D. Student, Information Science, UIUC</h5>
-                    <p class="text-muted">I am a second-year Ph.D. student of Information Sciences at <a href="https://ischool.illinois.edu/" style="text-decoration:underline;">iSchool from University of Illinois Urbana-Champaign</a>, advised by <a href="https://ischool.illinois.edu/people/dong-wang" style="text-decoration:underline;">Prof. Dong Wang</a>. My research focuses on Responsible Machine Learning and Human-AI Interaction. I got my master's degree of <a href="https://www.cs.rochester.edu/" style="text-decoration:underline;">Computer Science from University of Rochester</a> and my bachelor's degree of Software Engineering from Chongqing University.</p>
+                    <h5 class="fg-theme mb-3">Ph.D. Student, Computer Science and Egnineering, University of Notre Dame</h5>
+                    <p class="text-muted">I am a Ph.D. student of <a href="https://ischool.illinois.edu/" style="text-decoration:underline;"> Computer Science and Engineering (CSE) at University of Notre Dame</a>. My research focuses on trustworthy machine learning and graph modeling. I got my master's degree of <a href="https://www.cs.rochester.edu/" style="text-decoration:underline;">Computer Science from University of Rochester</a> and my bachelor's degree of Software Engineering from Chongqing University.</p>
                     <ul class="theme-list">
                         <li><b>Linkedin:</b> <a href="https://www.linkedin.com/in/ziyi-kou-087200176/" style="text-decoration:underline;"> ziyi-kou-087200176</a></li>
                         <li><b>Google Scholar:</b><a href="https://scholar.google.com/citations?user=Ka_Up_gAAAAJ&hl=en" style="text-decoration:underline;"> Ziyi Kou - Google Scholar</a></li>
                         <li><b>Github:</b> <a href="https://github.com/arxrean" style="text-decoration:underline;">github.com/arxrean</a></li>
-                        <li><b>Email:</b> <a href="mailto: ziyikou2@illinois.edu" style="text-decoration:underline;">ziyikou2@illinois.edu</a></li>
+                        <li><b>Email:</b> <a href="mailto: zkou@nd.edu" style="text-decoration:underline;">zkou@nd.edu</a></li>
                     </ul>
                     <!-- <button class="btn btn-theme-outline"></button> -->
 <!--                     <form method="get" action="./files/Ziyi_Kou_CV.pdf">
@@ -143,8 +143,8 @@ a {
                         <li>
                             <div class="title" style="width: 220px">Aug. 2020 - Present</div>
                             <div class="details">
-                                <h5>University of Illinois Urbana-Champaign</h5>
-                                <small class="fg-theme">Ph.D. Student, Information Sciences, advisor: Prof. Dong Wang</small>
+                                <h5>University of Notre Dame</h5>
+                                <small class="fg-theme">Ph.D. Student, Computer Science and Engineering</small>
                                 <small><i>Courses: Text Mining, Algorithm and Complexity, Operating System, Computer Graphic</i></small>
                             </div>
                         </li>
@@ -152,7 +152,7 @@ a {
                             <div class="title" style="width: 220px">Aug. 2018 - May 2020</div>
                             <div class="details">
                                 <h5>University of Rochester</h5>
-                                <small class="fg-theme">M.S. Computer Science, advisor: Prof. Chenliang Xu</small>
+                                <small class="fg-theme">M.S. Computer Science</small>
                                 <small><i>Courses: Artificial Intelligence, Adv. Topic of Computer Vision, Intro. of Statistics, Machine Learning</i></small>
                             </div>
                         </li>
@@ -178,6 +178,14 @@ a {
                             </div>
                         </li> -->
                         <li>
+                            <div class="title" style="width: 220px">May. 2022 - Aug. 2022</div>
+                            <div class="details">
+                                <h5>Machine Learning Software Engineer, Intern</h5>
+                                <small class="fg-theme">Godaddy Inc.</small>
+                                <small><i>Multi-relational Graph based Recommendation System</i></small>
+                            </div>
+                        </li>
+                        <li>
                             <div class="title" style="width: 220px">Oct. 2019 - Apr. 2020</div>
                             <div class="details">
                                 <h5>Research Assistant</h5>
@@ -188,8 +196,8 @@ a {
                         <li>
                             <div class="title" style="width: 220px">Jun. 2019 - Sept. 2019</div>
                             <div class="details">
-                                <h5>Machine Learning Engineer, Intern</h5>
-                                <small class="fg-theme">AI Lab of Shanghai Jiaotong University (Suzhou), China</small>
+                                <h5>Deep Learning Engineer, Intern</h5>
+                                <small class="fg-theme">Suzhou Institute of Artificial Intelligence, Shanghai Jiao Tong University</small>
                                 <small><i>SmartTV embedded Asian Celebrity Face Recognition</i></p></small>
                             </div>
                         </li>
@@ -237,11 +245,11 @@ a {
                     <div class="px-lg-3">
                         <h4 class="wow fadeInUp">Technical App.</h4>
                         <div class="progress-wrapper wow fadeInUp">
-                            <span class="caption"><button type="button" class="btn btn-outline-secondary">AWS Server</button></span>
-                            <span class="caption"><button type="button" class="btn btn-outline-secondary">AWS S3</button></span>
+                            <span class="caption"><button type="button" class="btn btn-outline-secondary">Web Dev.</button></span>
+                            <span class="caption"><button type="button" class="btn btn-outline-secondary">SageMaker</button></span>
                             <span class="caption"><button type="button" class="btn btn-outline-secondary">Amazon Mturk</button></span>
-                            <span class="caption"><button type="button" class="btn btn-outline-secondary">Docker</button></span>
-                            <span class="caption"><button type="button" class="btn btn-outline-secondary">GPU Computing</button></span>
+                            <span class="caption"><button type="button" class="btn btn-outline-secondary">Git</button></span>
+                            <span class="caption"><button type="button" class="btn btn-outline-secondary">Data Crawling</button></span>
                             <span class="caption"><button type="button" class="btn btn-outline-secondary">Unity 3D</button></span>
                         </div>
                     </div>
