--- a/index.html
+++ b/index.html
@@ -268,41 +268,18 @@ a {
     </div>
     <div class="vg-page2 page-about" id="pub" style="padding-bottom: 5px;">
         <div class="container py-5" style="padding-top: 20px !important; padding-bottom: 20px !important;">
-            <h1 class="fw-normal wow fadeIn">Main Publications</h1>
+            <h1 class="fw-normal wow fadeIn">First-Author Publications</h1>
             <ul>
-                <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Yue, Z., Zeng H. and Wang, D., 2022, July.
-                    <a href="#" style="text-decoration:underline;"><i>Crowd, Expert & AI: A Human-AI Interactive Approach Towards Natural Language Explanation based COVID-19 Misinformation Detection.</i></a>
-                    In 2022 International Joint Conference on Artificial Intelligence (IJCAI'22)</li>
-                <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Duan, S. and Wang, D., 2022, April.
-                    <a href="#" style="text-decoration:underline;"><i>Can I only share my eyes? A Web Crowdsourcing based Face Partition Approach Towards Privacy-Aware Face Recognition.</i></a>
-                    In 2022 International Conference on World Wide Web (WWW'22)</li>
-                <li>Shang, L., <b>Kou, Z.</b>, Zhang, Y. and Wang, D., 2022, April.
-                    <a href="#" style="text-decoration:underline;"><i>A Duo-generative Approach to Explainable Multimodal COVID-19 Misinformation Detection.</i></a>
-                    In 2022 International Conference on World Wide Web (WWW'22)</li>
-                <li><b>Kou, Z.</b>, Zhang, Y., Zhang, D.Y. and Wang, D., 2022, November.
-                    <a href="#" style="text-decoration:underline;"><i>CrowdGraph: A Crowdsourcing Multi-modal Knowledge Graph Approach to Explainable Fauxtography Detection.</i></a>
-                    In 2022 ACM Conference on Computer Supported Cooperative Work and Social Computing (CSCW'22)</li>
-                <li><b>Kou, Z.</b>, Shang, L., Zeng, H, Zhang, Y., and Wang, D., 2021, December.
-                    <a href="#" style="text-decoration:underline;"><i>ExgFair: A Crowdsourcing Data Exchange Approach To Fair Human Face Datasets Augmentation.</i></a>
-                    In 2021 IEEE International Conference on Big Data (BigData'21)</li>
-                <li><b>Kou, Z.</b>, Shang, L., Zhang, Y., Wang, D., 2022, January.
-                    <a href="#" style="text-decoration:underline;"><i>HC-COVID: A Hierarchical Crowdsource Knowledge Graph to Explainable COVID-19 Misinformation Detection.</i></a>
-                    In Proceedings of the 2022 ACM Conference on Supporting Groupwork (GROUP'22)</li>
-                <li><b>Kou, Z.</b>, Zhang, Y., Shang, L. and Wang, D., 2021, June.
-                    <a href="https://ieeexplore.ieee.org/abstract/document/9521312" style="text-decoration:underline;"><i>FairCrowd: Fair Human Face Dataset Sampling via Batch-Level Crowdsourcing Bias Inference.</i></a>
-                    In 2021 IEEE/ACM 29th International Symposium on Quality of Service (IWQOS'21)</li>
-                <li>Zhang, D.Y., <b>Kou, Z.</b> and Wang, D., 2021, May.
-                    <a href="https://ieeexplore.ieee.org/abstract/document/9488776" style="text-decoration:underline;"><i>FedSens: A Federated Learning Approach for Smart Health Sensing with Class Imbalance in Resource Constrained Edge Computing.</i></a>
-                    In IEEE INFOCOM 2021-IEEE Conference on Computer Communications (INFOCOM' 21)</li>
-                <li><b>Kou, Z.</b>, Cui, G., Wang, S., Zhao, W. and Xu, C., 2021.
-                    <a href="https://openaccess.thecvf.com/content/WACV2021/html/Kou_Improve_CAM_With_Auto-Adapted_Segmentation_and_Co-Supervised_Augmentation_WACV_2021_paper.html" style="text-decoration:underline;"><i>Improve CAM with Auto-adapted Segmentation and Co-supervised Augmentation.</i></a>
-                    In Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision (WACV'21)</li>
-                <li><b>Kou, Z.</b>, Zhang, D.Y., Shang, L. and Wang, D., 2020, December.
-                    <a href="https://ieeexplore.ieee.org/abstract/document/9378019" style="text-decoration:underline;"><i>ExFaux: A Weakly Supervised Approach to Explainable Fauxtography Detection.</i></a>
-                    In 2020 IEEE International Conference on Big Data (BigData'20)</li>
-                <li>Chen, L., Cui, G., Liu, C., <b>Kou, Z.</b>, Xu, Y. and Xu, C., 2020, August.
-                    <a href="https://arxiv.org/pdf/2007.08547.pdf" style="text-decoration:underline;"><i>Talking-head generation with rhythmic head motion.</i></a>
-                    In 2020 European Conference on Computer Vision (ECCV'20)</li>
+                <li><i>Crowd, Expert & AI: A Human-AI Interactive Approach Towards Natural Language Explanation based COVID-19 Misinformation Detection</i>, IJCAI'22</li>
+                <li><i>Can I only share my eyes? A Web Crowdsourcing based Face Partition Approach Towards Privacy-Aware Face Recognition</i>, TheWebConf'22</li>
+                <li>(Co-First)<i> A Duo-generative Approach to Explainable Multimodal COVID-19 Misinformation Detection</i>, TheWebConf'22</li>
+                <li><i>CrowdGraph: A Crowdsourcing Multi-modal Knowledge Graph Approach to Explainable Fauxtography Detection</i>, CSCW'22</li>
+                <li><i>HC-COVID: A Hierarchical Crowdsource Knowledge Graph to Explainable COVID-19 Misinformation Detection</i>, GROUP'22</li>
+                <li><i>ExgFair: A Crowdsourcing Data Exchange Approach To Fair Human Face Datasets Augmentation</i>, BigData'21</li>
+                <li><i>FairCrowd: Fair Human Face Dataset Sampling via Batch-Level Crowdsourcing Bias Inference</i>, IWQOS'21</li>
+                <li>Improve CAM with Auto-adapted Segmentation and Co-supervised Augmentation</i>, WACV'21</li>
+                <li><i>ExFaux: A Weakly Supervised Approach to Explainable Fauxtography Detection</i>, BigData'20</li>
+                <li><i>What comprises a good talking-head video generation</i>, CVPRW'20</li>
             </ul>
         </div>
     </div>
