--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ a {
 <!--             <h1 class="fw-normal wow fadeIn">My Skills</h1> -->
             <ul>
                 <li>One paper accepted by IJCAI2022</li>
-                <li>One paper accepted by WWW2022</li>
+                <li>Two papers accepted by TheWebConf2022</li>
                 <li>One paper accepted by CSCW2022</li>
             </ul>
         </div>
