--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@ a {
                         <li><b>Github:</b> <a href="https://github.com/arxrean" style="text-decoration:underline;">github.com/arxrean</a></li>
                         <li><b>Email:</b> <a href="mailto: zkou@nd.edu" style="text-decoration:underline;">zkou@nd.edu</a></li>
                     </ul>
-                    <!-- <button class="btn btn-theme-outline"></button> -->
-<!--                     <form method="get" action="./files/Ziyi_Kou_CV.pdf">
+                    <button class="btn btn-theme-outline"></button>
+                    <form method="get" action="./files/Ziyi_Kou_CV.pdf">
                         <button class="btn btn-theme-outline">Download CV</button>
-                    </form> -->
+                    </form>
                 </div>
             </div>
         </div>
