--- a/index.html
+++ b/index.html
@@ -157,20 +157,20 @@ a {
                 <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
                     <h2 class="fw-normal">Work Experience</h2>
                     <ul class="timeline mt-4 pr-md-5">
-                        <!--                         <li>
-                            <div class="title" style="width: 220px">Sept. 2021 - Present</div>
+                        <li>
+                            <div class="title" style="width: 220px">Oct. 2022 - Feb. 2023</div>
                             <div class="details">
-                                <h5>Research Assistant</h5>
-                                <small class="fg-theme">University of Illinois Urbana-Champaign</small>
-                                <small><i>Crowdsourcing Misinformation Detection</i></small>
+                                <h5>Machine Learning Intern</h5>
+                                <small class="fg-theme">Instacart</small>
+                                <small><i>Graph Based Personalized List Generation</i></small>
                             </div>
-                        </li> -->
+                        </li>
                         <li>
                             <div class="title" style="width: 220px">May. 2022 - Aug. 2022</div>
                             <div class="details">
-                                <h5>Machine Learning Software Engineer, Intern</h5>
+                                <h5>Machine Learning Intern</h5>
                                 <small class="fg-theme">Godaddy Inc.</small>
-                                <small><i>Multi-relational Graph based Recommendation System</i></small>
+                                <small><i>Multi-relational Graph Based Recommendation</i></small>
                             </div>
                         </li>
                         <li>
@@ -184,7 +184,7 @@ a {
                         <li>
                             <div class="title" style="width: 220px">Jun. 2019 - Sept. 2019</div>
                             <div class="details">
-                                <h5>Deep Learning Engineer, Intern</h5>
+                                <h5>Deep Learning Intern</h5>
                                 <small class="fg-theme">Suzhou Institute of Artificial Intelligence, Shanghai Jiao Tong University</small>
                                 <small><i>SmartTV embedded Asian Celebrity Face Recognition</i></p></small>
                             </div>
