--- a/index.html
+++ b/index.html
@@ -256,18 +256,18 @@ a {
     </div>
     <div class="vg-page2 page-about" id="pub" style="padding-bottom: 5px;">
         <div class="container py-5" style="padding-top: 20px !important; padding-bottom: 20px !important;">
-            <h1 class="fw-normal wow fadeIn">First-Author Publications</h1>
+            <h1 class="fw-normal wow fadeIn">Main Publications</h1>
             <ul>
-                <li><i>Crowd, Expert & AI: A Human-AI Interactive Approach Towards Natural Language Explanation based COVID-19 Misinformation Detection</i>, IJCAI'22</li>
-                <li><i>Can I only share my eyes? A Web Crowdsourcing based Face Partition Approach Towards Privacy-Aware Face Recognition</i>, TheWebConf'22</li>
-                <li>(Co-First)<i> A Duo-generative Approach to Explainable Multimodal COVID-19 Misinformation Detection</i>, TheWebConf'22</li>
-                <li><i>CrowdGraph: A Crowdsourcing Multi-modal Knowledge Graph Approach to Explainable Fauxtography Detection</i>, CSCW'22</li>
-                <li><i>HC-COVID: A Hierarchical Crowdsource Knowledge Graph to Explainable COVID-19 Misinformation Detection</i>, GROUP'22</li>
-                <li><i>ExgFair: A Crowdsourcing Data Exchange Approach To Fair Human Face Datasets Augmentation</i>, BigData'21</li>
-                <li><i>FairCrowd: Fair Human Face Dataset Sampling via Batch-Level Crowdsourcing Bias Inference</i>, IWQOS'21</li>
-                <li>Improve CAM with Auto-adapted Segmentation and Co-supervised Augmentation</i>, WACV'21</li>
-                <li><i>ExFaux: A Weakly Supervised Approach to Explainable Fauxtography Detection</i>, BigData'20</li>
-                <li><i>What comprises a good talking-head video generation</i>, CVPRW'20</li>
+                <li><i>A Crowd-AI Duo Relational Graph Learning Framework Towards Social Impact Aware Photo Classification</i>, 2nd Author, AAAI'23</li>
+                <li><i>A Duo-Generative Approach to Explainable Multimodal COVID-19 Misinformation Detection</i>, co-1st Author, WWW'22</li>
+                <li><i>Human-AI Interaction Towards Natural Language Explanation based COVID-19 Misinformation Detection</i>, 1st Author, IJCAI'22</li>
+                <li><i>A Crowdsourcing Multi-Modal Knowledge Graph Approach to Explainable Fauxtography Detection</i>, 1st Author, CSCW'22</li>
+                <li><i>A Hierarchical Crowdsource Knowledge Graph Approach to Explainable COVID-19 Misinformation Detection</i>, 1st Author, GROUP'22</li>
+                <li><i>Improve CAM with Auto-adapted Segmentation and Co-supervised Augmentation</i>, 1st Author, WACV'21</li>
+                <li>ExgFair: A Crowdsourcing Data Exchange Approach To Fair Human Face Datasets Augmentation</i>, 1st Author, BigData'21</li>
+                <li><i>Faircrowd: Fair human face dataset sampling via batch-level crowdsourcing bias inference</i>, 1st Author, IWQOS'21</li>
+                <li><i>What comprises a good talking-head video generation</i>, co-1st Author, CVPRW'20</li>
+                <li><i>Exfaux: A weakly supervised approach to explainable fauxtography detection</i>, 1st Author, BigData'20</li>
             </ul>
         </div>
     </div>
