--- a/index.html
+++ b/index.html
@@ -249,8 +249,11 @@ a {
         <div class="container py-5" style="padding-top: 10px !important; padding-bottom: 5px !important;">
             <h1 class="fw-normal wow fadeIn">Awards</h1>
             <ul>
-                <li>Student Conference Grant: IEEE INFOCOM 2021, IEEE BigData 2021</li>
-                <li>Academic Tuition Scholarship, University of Rochester</li>
+                <li>3rd Winner of Ebay University Machine Learning Competition - Simi-Supervised Name Entity Recognition, 2023</li>
+                <li>Winner of Sequential Dynamic Molecular Prediction AI Competition, Argonne US National Lab, 2022	</li>
+                <li>Bronze Medal for H&M Fashion Recommendations, Kaggle 2022	</li>
+                <li>PhD Student Travel Grants, IEEE INFOCOM and IEEE BigData	</li>
+                <li>Graduate Tuition Scholarship, University of Rochester 2018</li>
             </ul>
         </div>
     </div>
