--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@ a {
             <h1 class="fw-normal wow fadeIn">Main Publications</h1>
             <ul>
                 <li><i>A Crowd-AI Duo Relational Graph Learning Framework Towards Social Impact Aware Photo Classification</i>, 2nd Author, AAAI'23</li>
+                <li><i>A Web Crowdsourcing Based Face Partition Approach Towards Privacy-Aware Face Recognition</i>, 1st Author, WWW'22</li>
                 <li><i>A Duo-Generative Approach to Explainable Multimodal COVID-19 Misinformation Detection</i>, co-1st Author, WWW'22</li>
                 <li><i>Human-AI Interaction Towards Natural Language Explanation based COVID-19 Misinformation Detection</i>, 1st Author, IJCAI'22</li>
                 <li><i>A Crowdsourcing Multi-Modal Knowledge Graph Approach to Explainable Fauxtography Detection</i>, 1st Author, CSCW'22</li>
