--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@ a {
         <div class="container py-5" style="padding-top: 10px !important; padding-bottom: 5px !important;">
             <h1 class="fw-normal wow fadeIn">Awards</h1>
             <ul>
+                <li>Notre Dame CSE Outstanding Research Award, 2023</li>
                 <li>3rd Winner of Ebay University Machine Learning Competition - Simi-Supervised Name Entity Recognition, 2023</li>
                 <li>Winner of Sequential Dynamic Molecular Prediction AI Competition, Argonne US National Lab, 2022	</li>
                 <li>Bronze Medal for H&M Fashion Recommendations, Kaggle 2022	</li>
