--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@ a {
                     <h2 class="fw-normal">Work Experience</h2>
                     <ul class="timeline mt-4 pr-md-5">
                         <li>
+                            <div class="title" style="width: 220px">June. 2023 - Aug. 2023</div>
+                            <div class="details">
+                                <h5>Applied Scientist Intern</h5>
+                                <small class="fg-theme">Amazon</small>
+                                <small><i>TBD</i></small>
+                            </div>
+                        </li>
+                        <li>
                             <div class="title" style="width: 220px">Oct. 2022 - Feb. 2023</div>
                             <div class="details">
                                 <h5>Machine Learning Intern</h5>
