--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@ a {
         <div class="container py-5" style="padding-top: 20px !important; padding-bottom: 20px !important;">
             <h1 class="fw-normal wow fadeIn">Main Publications</h1>
             <ul>
+                <li><i>Modeling Sequential Collaborative User Behaviors for Seller-aware Next Basket Recommendation</i>, 1st Author, CIKM'23</li>
                 <li><i>A Controllable Prompt Adversarial Attacking Framework for Black-Box Text Guided Image Generation Models</i>, 1st Author, IJCAI'23</li>
                 <li><i>A Crowd-AI Duo Relational Graph Learning Framework Towards Social Impact Aware Photo Classification</i>, 2nd Author, AAAI'23</li>
                 <li><i>A Web Crowdsourcing Based Face Partition Approach Towards Privacy-Aware Face Recognition</i>, 1st Author, WWW'22</li>
