--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ a {
                     </ul>
                 </div>
                 <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
-                    <h2 class="fw-normal">Work Experience</h2>
+                    <h2 class="fw-normal">Recent Work Experience</h2>
                     <ul class="timeline mt-4 pr-md-5">
                         <li>
                             <div class="title" style="width: 220px">June. 2023 - Aug. 2023</div>
