--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@ a {
                             <div class="details">
                                 <h5>Applied Scientist Intern</h5>
                                 <small class="fg-theme">Amazon</small>
-                                <small><i>TBD</i></small>
+                                <small><i>Graph Neural Network Based Customer Insotck Value Estimation</i></small>
                             </div>
                         </li>
                         <li>
                             <div class="title" style="width: 220px">Oct. 2022 - Feb. 2023</div>
                             <div class="details">
-                                <h5>Machine Learning Intern</h5>
+                                <h5>Machine Learning Engineer Intern</h5>
                                 <small class="fg-theme">Instacart</small>
                                 <small><i>Graph Based Personalized List Generation</i></small>
                             </div>
@@ -176,7 +176,7 @@ a {
                         <li>
                             <div class="title" style="width: 220px">May. 2022 - Aug. 2022</div>
                             <div class="details">
-                                <h5>Machine Learning Intern</h5>
+                                <h5>Machine Learning Engineer Intern</h5>
                                 <small class="fg-theme">Godaddy Inc.</small>
                                 <small><i>Multi-relational Graph Based Recommendation</i></small>
                             </div>
