--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@ a {
                         <li>
                             <div class="title" style="width: 220px">June. 2023 - Aug. 2023</div>
                             <div class="details">
+                                <h5>Research Scientist Intern</h5>
+                                <small class="fg-theme">Meta</small>
+                                <small><i>TBD</i></small>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="title" style="width: 220px">June. 2023 - Aug. 2023</div>
+                            <div class="details">
                                 <h5>Applied Scientist Intern</h5>
                                 <small class="fg-theme">Amazon</small>
                                 <small><i>Graph Neural Network Based Customer Insotck Value Estimation</i></small>
