--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ a {
                             <div class="details">
                                 <h5>Applied Scientist Intern</h5>
                                 <small class="fg-theme">Amazon</small>
-                                <small><i>Graph Neural Network Based Customer Insotck Value Estimation</i></small>
+                                <small><i>Graph Neural Network Based Customer Insotck Value Estimation. Received return incline offer.</i></small>
                             </div>
                         </li>
                         <li>
@@ -178,7 +178,7 @@ a {
                             <div class="details">
                                 <h5>Machine Learning Engineer Intern</h5>
                                 <small class="fg-theme">Instacart</small>
-                                <small><i>Graph Based Personalized List Generation</i></small>
+                                <small><i>Graph Based Next-Basket Recommendation. Published at CIKM2023.</i></small>
                             </div>
                         </li>
                         <li>
@@ -186,7 +186,7 @@ a {
                             <div class="details">
                                 <h5>Machine Learning Engineer Intern</h5>
                                 <small class="fg-theme">Godaddy Inc.</small>
-                                <small><i>Multi-relational Graph Based Recommendation</i></small>
+                                <small><i>Multi-relational Graph Based Recommendation. Received return intern offer.</i></small>
                             </div>
                         </li>
 <!--                         <li>
