--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ a {
                             <div class="details">
                                 <h5>Research Scientist Intern</h5>
                                 <small class="fg-theme">Meta</small>
-                                <small><i>TBD</i></small>
+                                <small><i>Visual Knowledge Transfer for 3D Glove Tracking in VR</i></small>
                             </div>
                         </li>
                         <li>
