--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@ a {
         <div class="container py-5" style="padding-top: 20px !important; padding-bottom: 20px !important;">
             <h1 class="fw-normal wow fadeIn">Main Publications</h1>
             <ul>
+                <li><i>FaDE: A Face Segment Driven Identity Anonymization Framework For Fair Face Recognition</i>, 1st Author, CIKM'24</li>
                 <li><i>LeMon: Automating Portrait Generation for Zero-Shot Story Visualization with Multi-Character Interactions</i>, 1st Author, KDD'24</li>
                 <li><i>Modeling Sequential Collaborative User Behaviors for Seller-aware Next Basket Recommendation</i>, 1st Author, CIKM'23</li>
                 <li><i>A Controllable Prompt Adversarial Attacking Framework for Black-Box Text Guided Image Generation Models</i>, 1st Author, IJCAI'23</li>
