--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ a {
                 </div>
                 <div class="col-lg-6 offset-lg-1 wow fadeInRight">
                     <h1 class="fw-light">Ziyi Kou</h1>
-                    <h5 class="fg-theme mb-3">Ph.D. candidate, Computer Science and Egnineering, University of Notre Dame</h5>
-                    <p class="text-muted">I am a Ph.D. candidate of <a href="https://ischool.illinois.edu/" style="text-decoration:underline;"> Computer Science and Engineering (CSE) at University of Notre Dame</a>. My advisor is <a href="https://engineering.nd.edu/faculty/xiangliang-zhang/" style="text-decoration:underline;"> Dr. Xiangliang Zhang</a>. My research focuses on multimodal generative AI, trustworthy computer vision and graph neural networks. I got my master's degree of <a href="https://www.cs.rochester.edu/" style="text-decoration:underline;">Computer Science from University of Rochester</a> and my bachelor's degree of Software Engineering from Chongqing University.</p>
+                    <h5 class="fg-theme mb-3">Ph.D., Computer Science and Egnineering, University of Notre Dame</h5>
+                    <p class="text-muted">I am a research scientist at Meta Reality Lab Research. I obtained my Ph.D. degree from Computer Science and Engineering (CSE) department at University of Notre Dame</a>. My advisor is <a href="https://engineering.nd.edu/faculty/xiangliang-zhang/" style="text-decoration:underline;"> Dr. Xiangliang Zhang</a>. My research focuses on multimodal foundational AI, trustworthy machine learning and graph neural networks. I received my master's degree of <a href="https://www.cs.rochester.edu/" style="text-decoration:underline;">Computer Science from University of Rochester</a> and my bachelor's degree of Software Engineering from Chongqing University.</p>
                     <ul class="theme-list">
                         <li><b>Linkedin:</b> <a href="https://www.linkedin.com/in/ziyi-kou-087200176/" style="text-decoration:underline;"> ziyi-kou-087200176</a></li>
                         <li><b>Google Scholar:</b><a href="https://scholar.google.com/citations?user=Ka_Up_gAAAAJ&hl=en" style="text-decoration:underline;"> Ziyi Kou - Google Scholar</a></li>
@@ -129,10 +129,10 @@ a {
                     <h2 class="fw-normal">Education</h2>
                     <ul class="timeline mt-4 pr-md-5">
                         <li>
-                            <div class="title" style="width: 220px">Aug. 2020 - Present</div>
+                            <div class="title" style="width: 220px">Aug. 2020 - May 2024</div>
                             <div class="details">
                                 <h5>University of Notre Dame</h5>
-                                <small class="fg-theme">Ph.D. Student, Computer Science and Engineering</small>
+                                <small class="fg-theme">Ph.D., Computer Science and Engineering</small>
                                 <small><i>Courses: Text Mining, Algorithm and Complexity, Operating System, Computer Graphic</i></small>
                             </div>
                         </li>
@@ -157,6 +157,14 @@ a {
                 <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
                     <h2 class="fw-normal">Recent Work Experience</h2>
                     <ul class="timeline mt-4 pr-md-5">
+                        <li>
+                            <div class="title" style="width: 220px">June. 2024 - Present</div>
+                            <div class="details">
+                                <h5>Research Scientist</h5>
+                                <small class="fg-theme">Meta</small>
+                                <small><i>Multi-Modal Foundational Computer Vision</i></small>
+                            </div>
+                        </li>
                         <li>
                             <div class="title" style="width: 220px">Dec. 2023 - Mar. 2024</div>
                             <div class="details">
